[tool.poetry]
name = "lilywhite"
version = "0.1.0"
description = "Code runner for competitive programming problemsetters"
authors = ["LilyWhite <lilywhite2005@outlook.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "SJTU Mirror"
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
